# Spaceinvaders

./: .gitignore  CLAUDE.md  README.md
.claude/skills/c-client/: SKILL.md
.claude/skills/constraints/: SKILL.md
.claude/skills/game-mechanics/: SKILL.md
.claude/skills/java-server/: SKILL.md
.claude/skills/network-protocol/: SKILL.md
.claude/skills/pico-controller/: SKILL.md
.claude/skills/project-structure/: SKILL.md
.claude/skills/requirements/: SKILL.md
.claude/skills/reusable-base-code/: SKILL.md
bitacora/: README.md
client-c/: Makefile  README.md
client-c/include/: audio.h  constants.h  input.h  network.h  pico.h  protocol.h  render.h
client-c/src/: audio.c  input.c  main.c  network.c  pico.c  protocol.c  render.c
client-c/test/: test_protocol.c
docs/: grading-rubric.md  protocolo.md
docs/diagramas/: README.md
pico-controller/: CMakeLists.txt  README.md
pico-controller/include/: button.h  config.h  uart_sender.h
pico-controller/src/: button.c  main.c  main_blink_test.c  uart_sender.c
scripts/: verify-commits.sh
server-java/: README.md  build.gradle  gradlew.bat  settings.gradle.kts
server-java/src/main/java/cr/ac/tec/spaceinvaders/admin/: AdminApp.java  AdminConexion.java  AdminVentana.java
server-java/src/main/java/cr/ac/tec/spaceinvaders/server/: Main.java
server-java/src/main/java/cr/ac/tec/spaceinvaders/server/cli/: ConsolaAdmin.java  PruebaConsola.java
server-java/src/main/java/cr/ac/tec/spaceinvaders/server/entidades/: Alien.java  Bala.java  Bunker.java  Canon.java  Crab.java  EntidadJuego.java  Jugador.java  Octopus.java  Ovni.java  Squid.java  TipoAlien.java
server-java/src/main/java/cr/ac/tec/spaceinvaders/server/estructuras/: ListaEnlazada.java  Nodo.java
server-java/src/main/java/cr/ac/tec/spaceinvaders/server/eventos/: EventoJuego.java
server-java/src/main/java/cr/ac/tec/spaceinvaders/server/fabricas/: FabricaAliens.java  FabricaAliensEstandar.java
server-java/src/main/java/cr/ac/tec/spaceinvaders/server/nucleo/: DetectorColisiones.java  EstadoJuego.java  GameLoop.java  GestorOleadas.java  MotorJuego.java
server-java/src/main/java/cr/ac/tec/spaceinvaders/server/observador/: GameObserver.java  Sujeto.java
server-java/src/main/java/cr/ac/tec/spaceinvaders/server/red/: JsonUtil.java  (+4 more)
spectator-c/: README.md
(+20 files in other folders)
